--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						</div>
 
 						<input type="number" id="tip6" name="tip" class="form__input--number form__input--as-btn"
-							placeholder="Custom" min="0">
+							placeholder="Custom" min="0" step="1">
 					</div>
 				</div>
 
